Pendulum/Pendulum.sdk/.metadata/.plugins/org.eclipse.cdt.ui/app_prod-0.build.log
21:15:16 **** Auto Build of configuration Debug for project app_prod-0 ****
make all 
Building file: ../src/utilities/axi_gpio.c
Invoking: ARM gcc compiler
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/utilities/axi_gpio.o" -I../../app_prod-0_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/utilities/axi_gpio.d" -MT"src/utilities/axi_gpio.d" -o "src/utilities/axi_gpio.o" "../src/utilities/axi_gpio.c"
Finished building: ../src/utilities/axi_gpio.c
 
Building file: ../src/utilities/fifo_queue.c
Invoking: ARM gcc compiler
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/utilities/fifo_queue.o" -I../../app_prod-0_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/utilities/fifo_queue.d" -MT"src/utilities/fifo_queue.d" -o "src/utilities/fifo_queue.o" "../src/utilities/fifo_queue.c"
In file included from ../src/utilities/fifo_queue.c:8:0:
../src/utilities/fifo_queue.c: In function 'init_fifo_queues':
../src/utilities/fifo_queue.h:13:22: error: 'XPAR_AXI_FIFO_PRODUCTION_DEVICE_ID' undeclared (first use in this function)
 #define FIFO_DEV_ID  XPAR_AXI_FIFO_PRODUCTION_DEVICE_ID
                      ^
../src/utilities/fifo_queue.c:22:32: note: in expansion of macro 'FIFO_DEV_ID'
  Config = XLlFfio_LookupConfig(FIFO_DEV_ID);
                                ^
../src/utilities/fifo_queue.h:13:22: note: each undeclared identifier is reported only once for each function it appears in
 #define FIFO_DEV_ID  XPAR_AXI_FIFO_PRODUCTION_DEVICE_ID
                      ^
../src/utilities/fifo_queue.c:22:32: note: in expansion of macro 'FIFO_DEV_ID'
  Config = XLlFfio_LookupConfig(FIFO_DEV_ID);
                                ^
In file included from ../../app_prod-0_bsp/ps7_cortexa9_0/include/xllfifo.h:181:0,
                 from ../src/utilities/fifo_queue.c:11:
../src/utilities/fifo_queue.c: In function 'dequeue':
../../app_prod-0_bsp/ps7_cortexa9_0/include/xllfifo_hw.h:91:26: warning: statement with no effect [-Wunused-value]
 #define XLLF_RLF_OFFSET  0x00000024  /**< Receive Length */
                          ^
../src/utilities/fifo_queue.c:68:2: note: in expansion of macro 'XLLF_RLF_OFFSET'
  XLLF_RLF_OFFSET;
  ^
make: *** [src/utilities/fifo_queue.o] Error 1

21:15:16 Build Finished (took 112ms)

